# BadiliX

./: .gitignore  Cargo.toml  README.md  at_api.key-example.toml  badilix-presentation.odp  deny.toml
BadiliX-POAP/: README.md  package-lock.json  package.json
BadiliX-POAP/web/src/: index.html  styles.css
BadiliX-POAP/web/src/app/: app-layout.tsx
at/: Cargo.toml
client/: Cargo.toml
client/src/: exchange.rs  main.rs  poap_ops.rs
common/: Cargo.toml
common/src/: ata.rs  configuration.rs  errors.rs  keys.rs  lib.rs  poap.rs  program_utils.rs  random.rs  txs.rs  types.rs  utils.rs
exchange_program/: Cargo.toml
exchange_program/src/: exchange_structure.rs  lib.rs  processor.rs
programs/: Cargo.toml
programs/src/: main.rs
server/: Cargo.toml
server/src/: exchange.rs  main.rs  messaging.rs  poap.rs  poap_ops.rs  program_utils.rs  txs.rs
server/src/ussd/: http_server.rs  mod.rs  ops.rs  ussd_errors.rs
