[workspace]
members = ["common"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "AGPL-3.0-or-later"


[workspace.dependencies]
borsh = "1.5.1"
solana-program = "2.0.10"
spl-token = "6.0.0"
spl-token-2022 = "5.0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
