[workspace]
members = ["common", "programs", "server"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "AGPL-3.0-or-later"


[workspace.dependencies]
borsh = "1.5.1"
solana-program = "2.0.10"
spl-token = "6.0.0"
spl-token-2022 = "5.0.2"
bs58 = "0.5.1"
blake3 = { version = "1.5.1", default-features = false, features = ["digest"] }
solana-client = "=2.0.11"
solana-sdk = "=2.0.11"
ed25519-dalek = "=1"
spl-token-metadata-interface = "=0.5.1"
spl-type-length-value = "=0.6.0"
spl-associated-token-account = "=5.0.1"
percent-encoding = "=2.3.1"


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
