[package]
name = "server"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
trillium = "0.2.20"
trillium-http = "0.3.17"
trillium-smol = "0.4.2"
percent-encoding = "*"
