[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
borsh.workspace = true
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
tai64 = "4.0.0"
bs58.workspace = true
data-encoding = "2.6.0"
solana-program.workspace = true
