[package]
name = "common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
borsh.workspace = true
rand_chacha = { version = "0.3.1", optional = true }
rand_core = { version = "0.6.4", features = ["getrandom"], optional = true }
tai64 = { version = "4.0.0", optional = true }
bs58 = { workspace = true, optional = true }
data-encoding = { version = "2.6.0", optional = true }
solana-program.workspace = true
solana-client = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
spl-associated-token-account.workspace = true
spl-token-2022.workspace = true
sled = { version = "0.34.7", optional = true }
smol = { version = "2.0.2", optional = true }
serde = { version = "1.0.210", features = ["derive"], optional = true }
toml = { version = "0.8.19", optional = true }
ed25519-dalek.workspace = true


[features]
default = ["offchain"]
offchain = [
    "dep:rand_chacha",
    "dep:rand_core",
    "dep:rand_chacha",
    "dep:tai64",
    "dep:bs58",
    "dep:data-encoding",
    "dep:solana-client",
    "dep:solana-sdk",
    "dep:sled",
    "dep:serde",
    "dep:smol",
    "dep:toml",
]
