[package]
name = "exchange_program"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh.workspace = true
solana-program.workspace = true
common = { path = "../common", default-features = false }
spl-token-2022.workspace = true
