[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
solana-client = "2.0.11"
solana-program.workspace = true
solana-sdk = "2.0.11"
bs58.workspace = true
blake3.workspace = true
ed25519-dalek = "1"
spl-token-metadata-interface = "0.5.1"
spl-type-length-value = "0.6.0"
spl-token-2022.workspace = true
spl-token.workspace = true
spl-associated-token-account = "5.0.1"
