[package]
name = "server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trillium = "=0.2.20"
trillium-http = "=0.3.17"
trillium-smol = "=0.4.2"
percent-encoding.workspace = true
common = { path = "../common" }
solana-client.workspace = true
solana-program.workspace = true
solana-sdk.workspace = true
bs58.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
spl-token-metadata-interface.workspace = true
spl-type-length-value.workspace = true
spl-token-2022.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
smol = "2.0.2"
minreq = { version = "2.12.0", features = ["https-rustls"] }
jzon.workspace = true
trillium-logger = "0.4.5"
trillium-router = "0.4.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
